# rss-rs

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: app.rs  cli.rs  error.rs  frontend.rs  main.rs  menus.rs  models.rs  mongo.rs  util.rs
src/menus/: contents.rs  contents_menu.rs  delete_feed_popup.rs  feeds.rs  feeds_menu.rs  feeds_popup_menu.rs  mod.rs  stories.rs  stories_menu.rs  subscribe_popup.rs
src/models/: channel.rs  feed.rs  item.rs  mod.rs  story.rs
src/widgets/: channel_list.rs  channel_widget.rs  help_box.rs  input_widget.rs  item_list.rs  mod.rs  nav_list.rs  text_box.rs
