[package]
name = "rss-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
crossterm = "0.26.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.17", features = ["blocking"] }
thiserror = "1.0.40"
tui = "0.19.0"
url = "2.3.1"
xml-rs = "0.8.4"
