[package]
name = "rss-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["tokio-sync"]

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
crossterm = "0.26.1"
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = "1.0.163"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tui = "0.19.0"
url = "2.3.1"
rss = { version = "2.0.4", features = ["validation"] }
html2text = "0.6.0"
